Change GeoJSON file from optimized to real

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         }
         
         // Load GeoJSON
-        fetch('constituencies_325_ai_optimized.geojson')
+        fetch('constituencies_325_real.geojson')
             .then(response => response.json())
             .then(data => {
                 allData = data;
